# world-eye

./: .gitignore  README.md  main.py  pyproject.toml
cli/: data_cli.py
data/raw/: .gitignore  children-per-woman-fertility-rate-vs-level-of-prosperity.csv.dvc
notebooks/: 01.01-gdp-demographic.ipynb
src/: config.py
src/data/: data_ingestor.py
